# WeMouse

./: +  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  build_front.sh
client/solidclient/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/solidclient/src/: App.tsx  MouseTracker.tsx  index.css
src/: main.rs
