[package]
name = "websocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.12", features = ["full"] }
# tokio-stream = "0.1"
# tokio-tungstenite = "0.23.1"
anyhow = "1.0"
futures-util = "0.3"
# rustautogui = "2.4.0"
rust-embed = "8.6.0"
# hyper = { version = "1.6.0", features = ["full"] }
mime_guess = "2.0.5"
warp = "0.3.7"
clap = { version = "4.5.35", features = ["derive"] }
#winapi = { version = "0.3.9" , features = ["winuser", "wincon", "minwindef"]}
enigo = "0.3.0"
